adding liri to portfolio

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
 
     <!-- NAVBAR -->
-    <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" id="navbar">
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark" id="navbar">
       <a class="navbar-brand" href="#"><img src="assets/images/logo.png" id="logo" width="80" height="80" class="d-inline-block align-top"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -53,13 +53,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home |</a>
+            <a class="nav-link" style="color: aliceblue;" href="#">Home |</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#fish">Contact |</a>
+            <a class="nav-link" style="color: aliceblue;" href="#fish">Contact |</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Portfolio |</a>
+            <a class="nav-link" style="color: aliceblue;" href="#projects">Portfolio |</a>
           </li>
         </ul>
       </div>
@@ -172,6 +172,37 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md" id="rowContainer">
+      <div class="card" style="width: 18rem;"><a href="https://www.youtube.com/watch?v=fQQWf8ce8z0&t=0s" style="text-decoration: none;">
+  <img src="assets/images/game5.png" style="height: 140px;" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">This is a Terminal based program named Liri, it takes simple commands and outputs information. Here is the demo.</p>
+  </div>
+</div>
+    </div>
+  </a>
+    <!-- <div class="col-md" id="rowContainer">
+      <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/Train-Scheduler/" style="text-decoration: none;">
+        <img src="assets/images/game4.png" style="height: 140px;" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">This is the Train-Scheduler, you are able to make your own trian and time it arrives will refresh when time is up!</p>
+        </div>
+      </div>
+    </div> -->
+  </a>
+    <!-- <div class="col-md" id="rowContainer">
+      <div class="card" style="width: 18rem;"><a href="https://sobernheim-d.github.io/Project1/" style="text-decoration: none;">
+        <img src="assets/images/project1.png" style="height: 140px;" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">This is the Worker Safety Inspector 3000. It is able to detect personal protective equipment from an image! Check it out!</p>
+        </div>
+      </div>
+    </div> -->
   </div>
 </div>
 </a>
