--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
     <img src="assets/images/bass.jpg" class="img-fluid" alt="Responsive image">
   </div>
   <div id="aboutInfo">
-          <p>My name is Anibal Guerra, just in case you didn't see the big title there. You pronouce it ON_KNE_BAL
+          <p>My name is Anibal Guerra, just in case you didn't see the big title there. You pronounce it ON_KNE_BAL
               GER-RA most people have a hard time saying it. I'm 24 and I really enjoy the outdoors whenever I have the
               time. I am also planning a wedding so things can get pretty busy. I work in
               the
               automotive industry, parts mostly. I also have an Associates in Applied Science for
               Automotive Technology.</p>
           <p>But that was
-              always goint to be my backup plan until life happened, 4 years later I'm finally starting to pursue my passion. Coding has always peaked my curosity, building something from nothing is
+              always going to be my backup plan until life happened, 4 years later I'm finally starting to pursue my passion. Coding has always peaked my curiosity, building something from nothing is
               just
-              such an amzaing feeling. I'm greatful to have this opportunity in my life. I've have always tried to enjoy the little thing, fishing, camping and just spending time with my family. Living in such a small town you learn how to be patient.</p>
+              such an amazing feeling. I'm grateful to have this opportunity in my life. I've have always tried to enjoy the little thing, fishing, camping and just spending time with my family. Living in such a small town you learn how to be patient.</p>
               <p span id="fish">PS. No fish were harmed in the making of this website. <i id="fishIcon" class="fas fa-fish"></i></p>
   </div>
 </div>
