--- a/index.html
+++ b/index.html
@@ -186,26 +186,26 @@
 </div>
     </div>
   </a>
-    <!-- <div class="col-md" id="rowContainer">
-      <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/Train-Scheduler/" style="text-decoration: none;">
-        <img src="assets/images/game4.png" style="height: 140px;" class="card-img-top" alt="...">
+    <div class="col-md" id="rowContainer" style="padding-right: 380px;">
+      <div class="card" style="width: 18rem;"><a href="https://www.youtube.com/watch?v=7aJ16Gql2xo&t=0s" style="text-decoration: none;">
+        <img src="assets/images/game6.png" style="height: 140px;" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">This is the Train-Scheduler, you are able to make your own trian and time it arrives will refresh when time is up!</p>
+          <p class="card-text">This is Bamazon app you are able to purchase awesome things and not so awesome things here is a video!</p>
         </div>
       </div>
-    </div> -->
-  </a>
-    <!-- <div class="col-md" id="rowContainer">
+    </div>
+  <!-- </a>
+    <div class="col-md" id="rowContainer">
       <div class="card" style="width: 18rem;"><a href="https://sobernheim-d.github.io/Project1/" style="text-decoration: none;">
         <img src="assets/images/project1.png" style="height: 140px;" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">This is the Worker Safety Inspector 3000. It is able to detect personal protective equipment from an image! Check it out!</p>
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
-</a>
+</a> -->
 </div>
 <br><br>
 
