adding friend finder

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </div>
     </div>
   </a>
-    <div class="col-md" id="rowContainer" style="padding-right: 380px;">
+    <div class="col-md" id="rowContainer">
       <div class="card" style="width: 18rem;"><a href="https://www.youtube.com/watch?v=7aJ16Gql2xo&t=0s" style="text-decoration: none;">
         <img src="assets/images/game6.png" style="height: 140px;" class="card-img-top" alt="...">
         <div class="card-body">
@@ -194,18 +194,18 @@
         </div>
       </div>
     </div>
-  <!-- </a>
+  </a>
     <div class="col-md" id="rowContainer">
-      <div class="card" style="width: 18rem;"><a href="https://sobernheim-d.github.io/Project1/" style="text-decoration: none;">
-        <img src="assets/images/project1.png" style="height: 140px;" class="card-img-top" alt="...">
+      <div class="card" style="width: 18rem;"><a href="#" style="text-decoration: none;">
+        <img src="assets/images/home.png" style="height: 140px;" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">This is the Worker Safety Inspector 3000. It is able to detect personal protective equipment from an image! Check it out!</p>
+          <p class="card-text">This is the FriendFinder it will help you meet new people, some of them are out of this world!</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-</a> -->
+</a>
 </div>
 <br><br>
 
