adding link to friend finder

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </div>
   </a>
     <div class="col-md" id="rowContainer">
-      <div class="card" style="width: 18rem;"><a href="#" style="text-decoration: none;">
+      <div class="card" style="width: 18rem;"><a href="https://friend-finder-04-29-20.herokuapp.com/" style="text-decoration: none;">
         <img src="assets/images/home.png" style="height: 140px;" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">This is the FriendFinder it will help you meet new people, some of them are out of this world!</p>
