adding burger app

--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
         </div>
       </div>
     </div>
+    <div class="col-md" id="rowContainer">
+      <div class="card" style="width: 18rem;"><a href="https://friend-finder-04-29-20.herokuapp.com/" style="text-decoration: none;">
+        <img src="assets/images/burger.png" style="height: 140px;" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">In this app you are able to make a burger and eat it or not its up to you!</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 </a>
