adding new project to profolio

--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
               </div>
           </div>
         </div>
-        <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://rocky-dusk-35171.herokuapp.com/"
+        <div class="col-md" id="rowContainer" style="padding-right: 380px;">
+          <div class=" card" style="width: 18rem; "><a href="https://rocky-dusk-35171.herokuapp.com/"
               style="text-decoration: none;">
               <img src="assets/images/food.jpg" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
