--- a/index.html
+++ b/index.html
@@ -92,26 +92,40 @@
       </div>
 
       <!-- Form -->
-      <div id="contactForm" class="form-group">
-        <label for="exampleFormControlInput1">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+      <form method="POST" id="form" class= "was-validated">
+        <div class="mb-3">
+          <label for="validationTextarea">Email</label>
+          <input class="form-control is-invalid" type="email" id="email" placeholder="example@example.com" required></input>
+          <div class="invalid-feedback">
+            Please enter an email to contact you.
+          </div>
+        </div>
+      <div class="mb-3">
+        <label for="validationTextarea">Name</label>
+        <input class="form-control is-invalid" id="name" placeholder="John Doe" required></input>
+        <div class="invalid-feedback">
+          Please enter your full name.
+        </div>
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1">Name</label>
-        <textarea class="form-control" type="name" id="name" rows="1" placeholder="John Doe"></textarea>
+      <div class="mb-3">
+        <label for="validationTextarea">Subject</label>
+        <input class="form-control is-invalid" id="subject" placeholder="I want a website!" required></input>
+        <div class="invalid-feedback">
+          Please enter a subject.
+        </div>
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1">Subject</label>
-        <textarea class="form-control" type="Subject" id="subject" rows="1"
-          placeholder="I WANT AN AWESOME WEBSITE!"></textarea>
+      <div class="mb-3">
+        <label for="validationTextarea">Textarea</label>
+        <input class="form-control is-invalid" id="message" placeholder="Message" required></input>
+        <div class="invalid-feedback">
+          Please enter a message.
+        </div>
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea2">Message</label>
-        <textarea class="form-control" id="message" rows="3"></textarea>
-      </div>
-      <input id="submit" class="btn btn-secondary" type="submit" value="Submit">
+      <input id="submit" class="btn btn-secondary" type="submit" value="Submit"></input>
       </form>
     </span>
+
+    <div id="newForm"></div>
 
     <!-- Projects -->
 
@@ -224,24 +238,39 @@
               </div>
           </div>
         </div>
-        <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://damp-spire-51320.herokuapp.com/"
-              style="text-decoration: none;">
-              <img src="assets/images/burger.png" style="height: 140px;" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">In this app you are able to make a burger and eat it or not its up to you!</p>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md" id="rowContainer">
+              <div class="card" style="width: 18rem;"><a href="https://damp-spire-51320.herokuapp.com/"
+                  style="text-decoration: none;">
+                  <img src="assets/images/burger.png" style="height: 140px;" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">In this app you are able to make a burger and eat it or not its up to you!</p>
+                  </div>
               </div>
-          </div>
-        </div>
-        <div class="col-md" id="rowContainer" style="padding-right: 380px;">
-          <div class=" card" style="width: 18rem; "><a href="https://rocky-dusk-35171.herokuapp.com/"
-              style="text-decoration: none;">
-              <img src="assets/images/food.jpg" style="height: 140px;" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">In this app you are able to make a burger and eat it or not its up to you!</p>
+            </div>
+            </a>
+            <div class="col-md" id="rowContainer">
+              <div class="card" style="width: 18rem;"><a href="https://rocky-dusk-35171.herokuapp.com/"
+                  style="text-decoration: none;">
+                  <img src="assets/images/food.jpg" style="height: 140px;" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">This is Project 2 a recipe app your able to add recipes and comment and rate!</p>
+                  </div>
               </div>
-          </div>
-        </div>
+            </div>
+            </a>
+            <div class="col-md" id="rowContainer">
+              <!-- <div class="card" style="width: 18rem;"><a href="Add new app link here"
+                  style="text-decoration: none;">
+                  <img src="assets/images/#" style="height: 140px;" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">#</p>
+                  </div>
+              </div> -->
+            </div>
+
       </div>
     </div>
     </a>
