adding new project the denver post scraper

--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
             </div>
             </a>
             <div class="col-md" id="rowContainer">
-              <!-- <div class="card" style="width: 18rem;"><a href="Add new app link here"
+              <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/DenverPostScraper/"
                   style="text-decoration: none;">
-                  <img src="assets/images/#" style="height: 140px;" class="card-img-top" alt="...">
+                  <img src="assets/images/Denver-Scraper.png" style="height: 140px;" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">#</p>
+                    <p class="card-text">Here is The Denver Post news scraper it is able to scrape the latest news and save a note to it still need to get it deployed on Heroku</p>
                   </div>
-              </div> -->
+              </div>
             </div>
 
       </div>
