--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </div>
             </a>
             <div class="col-md" id="rowContainer">
-              <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/DenverPostScraper/"
+              <div class="card" style="width: 18rem;"><a href="https://denverpostscraper.herokuapp.com/"
                   style="text-decoration: none;">
                   <img src="assets/images/Denver-Scraper.png" style="height: 140px;" class="card-img-top" alt="...">
                   <div class="card-body">
