adding new homework to portfolio

--- a/index.html
+++ b/index.html
@@ -271,6 +271,38 @@
               </div>
             </div>
 
+            <div class="container">
+              <div class="row">
+                <div class="col-md" id="rowContainer">
+                  <div class="card" style="width: 18rem;"><a href="https://clicky-futurama-game.herokuapp.com/"
+                      style="text-decoration: none;">
+                      <img src="assets/images/clicky-game.png" style="height: 140px;" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text">This is the clicky-game! You need to click on all of the images but don't do it twice!</p>
+                      </div>
+                  </div>
+                </div>
+                </a>
+                <!-- <div class="col-md" id="rowContainer">
+                  <div class="card" style="width: 18rem;"><a href="https://rocky-dusk-35171.herokuapp.com/"
+                      style="text-decoration: none;">
+                      <img src="assets/images/food.jpg" style="height: 140px;" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text">This is Project 2 a recipe app your able to add recipes and comment and rate!</p>
+                      </div>
+                  </div>
+                </div>
+                </a>
+                <div class="col-md" id="rowContainer">
+                  <div class="card" style="width: 18rem;"><a href="https://denverpostscraper.herokuapp.com/"
+                      style="text-decoration: none;">
+                      <img src="assets/images/Denver-Scraper.png" style="height: 140px;" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text">Here is The Denver Post news scraper it is able to scrape the latest news and save a note to it still need to get it deployed on Heroku</p>
+                      </div>
+                  </div>
+                </div> -->
+
       </div>
     </div>
     </a>
