--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         </div>
         </a>
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/Unit-4-game/"
+          <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/Crystal-Collector/"
               style="text-decoration: none;">
-              <img src="assets/images/game1.png" style="height: 140px;" class="card-img-top" alt="...">
+              <img src="assets/images/crystal.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">This is the Crystal Collector, you click on crystals and they give you a number,
                   the goal is to match the random number given by the computer.</p>
