adding new styling to port

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div id="projects" class="container ">
       <div class="row">
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/Psychic-Game/"
+          <div class="card" ><a href="https://guerra15anibal.github.io/Psychic-Game/"
               style="text-decoration: none;">
               <img src="assets/images/game.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -143,7 +143,7 @@
         </div>
         </a>
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/Crystal-Collector/"
+          <div class="card" ><a href="https://guerra15anibal.github.io/Crystal-Collector/"
               style="text-decoration: none;">
               <img src="assets/images/crystal.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -154,7 +154,7 @@
         </div>
         </a>
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/TriviaGame/"
+          <div class="card" ><a href="https://guerra15anibal.github.io/TriviaGame/"
               style="text-decoration: none;">
               <img src="assets/images/game2.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -170,7 +170,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/GifTastic/"
+          <div class="card" ><a href="https://guerra15anibal.github.io/GifTastic/"
               style="text-decoration: none;">
               <img src="assets/images/game3.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -181,7 +181,7 @@
         </div>
         </a>
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://guerra15anibal.github.io/Train-Scheduler/"
+          <div class="card" ><a href="https://guerra15anibal.github.io/Train-Scheduler/"
               style="text-decoration: none;">
               <img src="assets/images/game4.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -192,7 +192,7 @@
         </div>
         </a>
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://sobernheim-d.github.io/Project1/"
+          <div class="card" ><a href="https://sobernheim-d.github.io/Project1/"
               style="text-decoration: none;">
               <img src="assets/images/project1.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -207,7 +207,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://www.youtube.com/watch?v=fQQWf8ce8z0&t=0s"
+          <div class="card" ><a href="https://www.youtube.com/watch?v=fQQWf8ce8z0&t=0s"
               style="text-decoration: none;">
               <img src="assets/images/game5.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -218,7 +218,7 @@
         </div>
         </a>
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://www.youtube.com/watch?v=7aJ16Gql2xo&t=0s"
+          <div class="card" ><a href="https://www.youtube.com/watch?v=7aJ16Gql2xo&t=0s"
               style="text-decoration: none;">
               <img src="assets/images/game6.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -229,7 +229,7 @@
         </div>
         </a>
         <div class="col-md" id="rowContainer">
-          <div class="card" style="width: 18rem;"><a href="https://friend-finder-04-29-20.herokuapp.com/"
+          <div class="card" ><a href="https://friend-finder-04-29-20.herokuapp.com/"
               style="text-decoration: none;">
               <img src="assets/images/home.png" style="height: 140px;" class="card-img-top" alt="...">
               <div class="card-body">
@@ -242,7 +242,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md" id="rowContainer">
-              <div class="card" style="width: 18rem;"><a href="https://damp-spire-51320.herokuapp.com/"
+              <div class="card" ><a href="https://damp-spire-51320.herokuapp.com/"
                   style="text-decoration: none;">
                   <img src="assets/images/burger.png" style="height: 140px;" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -252,7 +252,7 @@
             </div>
             </a>
             <div class="col-md" id="rowContainer">
-              <div class="card" style="width: 18rem;"><a href="https://rocky-dusk-35171.herokuapp.com/"
+              <div class="card" ><a href="https://rocky-dusk-35171.herokuapp.com/"
                   style="text-decoration: none;">
                   <img src="assets/images/food.jpg" style="height: 140px;" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -262,7 +262,7 @@
             </div>
             </a>
             <div class="col-md" id="rowContainer">
-              <div class="card" style="width: 18rem;"><a href="https://denverpostscraper.herokuapp.com/"
+              <div class="card" ><a href="https://denverpostscraper.herokuapp.com/"
                   style="text-decoration: none;">
                   <img src="assets/images/Denver-Scraper.png" style="height: 140px;" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -274,9 +274,9 @@
             <div class="container">
               <div class="row">
                 <div class="col-md" id="rowContainer">
-                  <div class="card" style="width: 18rem;"><a href="https://clicky-futurama-game.herokuapp.com/"
+                  <div class="card" ><a href="https://clicky-futurama-game.herokuapp.com/"
                       style="text-decoration: none;">
-                      <img src="assets/images/clicky-game.png" style="height: 140px;" class="card-img-top" alt="...">
+                      <img src="assets/images/clicky-game.png" style="height: 500px;" class="card-img-top" alt="...">
                       <div class="card-body">
                         <p class="card-text">This is the clicky-game! You need to click on all of the images but don't do it twice!</p>
                       </div>
@@ -284,7 +284,7 @@
                 </div>
                 </a>
                 <!-- <div class="col-md" id="rowContainer">
-                  <div class="card" style="width: 18rem;"><a href="https://rocky-dusk-35171.herokuapp.com/"
+                  <div class="card" ><a href="https://rocky-dusk-35171.herokuapp.com/"
                       style="text-decoration: none;">
                       <img src="assets/images/food.jpg" style="height: 140px;" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -294,7 +294,7 @@
                 </div>
                 </a>
                 <div class="col-md" id="rowContainer">
-                  <div class="card" style="width: 18rem;"><a href="https://denverpostscraper.herokuapp.com/"
+                  <div class="card" ><a href="https://denverpostscraper.herokuapp.com/"
                       style="text-decoration: none;">
                       <img src="assets/images/Denver-Scraper.png" style="height: 140px;" class="card-img-top" alt="...">
                       <div class="card-body">
